log
Wed 10 May 2023 12:01:14 AM UTC: 
 sudoku.c | 70 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 69 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
818242d
Wed 10 May 2023 12:04:21 AM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:128:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
  128 |   for (int i = 0; i < 9; i++)
      |   ^~~
sudoku.c:134:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
  134 |     return 1;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9225805
Wed 10 May 2023 12:04:39 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|3
total_score: 30/70
d4f0d1f
Wed 10 May 2023 12:06:36 AM UTC: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
17fe2a5
Wed 10 May 2023 12:08:06 AM UTC: 
 sudoku.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  0|0
2438f50
Wed 10 May 2023 12:10:22 AM UTC: 
 sudoku.c | 33 +++++++++++----------------------
 1 file changed, 11 insertions(+), 22 deletions(-)
 tests:  0|0
f0d8a3a
Wed 10 May 2023 12:11:05 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c: In function ‘test_dfs’:
test.c:206:19: error: implicit declaration of function ‘DFS’ [-Werror=implicit-function-declaration]
  206 |     Node* final = DFS(initial, &cont);
      |                   ^~~
test.c:206:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:230:11: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  230 |     final = DFS(initial, &cont);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
bd6124d
Wed 10 May 2023 12:12:07 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
test.c: In function ‘DFS’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b9ff301
Wed 10 May 2023 12:12:40 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
4490c68
Wed 10 May 2023 12:14:26 AM UTC: 
 sudoku.c | 75 ++++++++++++++++++++++++----------------------------------------
 1 file changed, 28 insertions(+), 47 deletions(-)
 tests:  6|2
total_score: 45/70
0da2657
Wed 10 May 2023 03:03:37 AM UTC: 
 sudoku.c | 56 +++++++++++++-------------------------------------------
 1 file changed, 13 insertions(+), 43 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:16: error: unused variable ‘p’ [-Werror=unused-variable]
   48 |   int i, j, k, p;
      |                ^
sudoku.c:48:13: error: unused variable ‘k’ [-Werror=unused-variable]
   48 |   int i, j, k, p;
      |             ^
sudoku.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4c9eb94
Wed 10 May 2023 03:03:46 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:13: error: unused variable ‘p’ [-Werror=unused-variable]
   48 |   int i, j, p;
      |             ^
sudoku.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3bfa211
Wed 10 May 2023 03:05:53 AM UTC: 
 sudoku.c | 58 +++++++++++++++++++++++++++++++++++++++++++++-------------
 1 file changed, 45 insertions(+), 13 deletions(-)
 tests:  6|2
total_score: 45/70
60c1318
Wed 10 May 2023 03:06:28 AM UTC: 
 sudoku.c | 18 +++++++-----------
 1 file changed, 7 insertions(+), 11 deletions(-)
 tests:  7|1
total_score: 55/70
ecedba1
Wed 10 May 2023 03:06:42 AM UTC: 
 sudoku.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
 tests:  10|0
total_score: 70/70
454a530
Wed 10 May 2023 03:09:22 AM UTC: 
 sudoku.c | 22 ++++++++++++++--------
 1 file changed, 14 insertions(+), 8 deletions(-)
 tests:  10|0
total_score: 70/70
ed007bb
